--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>ACNH Counter App</title>
-    <link rel="shortcut icon" type="image/x-icon" href="./docs/favicon/favicon.ico">
-    <link rel="apple-touch-icon" sizes="180x180" href="./docs/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./docs/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./docs/favicon/favicon-16x16.png">
-    <link rel="manifest" type="application/json" href="./docs/favicon/site.webmanifest">
-    <link rel="mask-icon" href="./docs/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" type="application/json" href="./src/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="./src/assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
